--- a/index.html
+++ b/index.html
@@ -151,18 +151,20 @@
   <div class="row">
  
   <div class="col-sm-4 wowload fadeInLeft">
-  <div class="spacer"><h2><i class="fa fa-code"></i> Jaboski Floricultura</h2>
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-  </div>
+  <div class="spacer"><h2><i class="fa fa-code"></i> Mr Waffle</h2>
+  <p>A Waffleria & Café - Mr.Waffle, não é só uma nova
+opção para lanches rápidos e sofisticados. É uma
+opção para a convivência, para brindar a amizade
+e saborear a vida. </p>
+ </div>
   </div>
 
    <div class="col-sm-8 wowload fadeInRight">
     <div id="carousel-works" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-     <div class="item active"><img src="images/portfolio/mrwaffle.png" class="img-responsive"><a href="http://mrwaffle.com.br/" class="view"><i class="fa fa-external-link"></i> View</a></div>
-     <div class="item"><img src="images/portfolio/mrwaffle2.png" class="img-responsive"><a href="http://mrwaffle.com.br/" class="view"><i class="fa fa-external-link"></i> View</a></div>
-     <div class="item"><img src="images/portfolio/mrwaffle3.png" class="img-responsive"><a href="http://mrwaffle.com.br/" class="view"><i class="fa fa-external-link"></i> View</a></div>
+     <div class="item active"><img src="images/portfolio/mrwaffle.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank"class="view"><i class="fa fa-external-link"></i>Acessar </a></div>
+     <div class="item"><img src="images/portfolio/mrwaffle2.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+     <div class="item"><img src="images/portfolio/mrwaffle3.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
     </div>    
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-works" role="button" data-slide="prev"><i class="fa fa-3x fa-angle-left"></i></a>
