chore: Add Massas Sabore D'Itália case

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="row">
  
   <div class="col-sm-4 wowload fadeInLeft">
-  <div class="spacer"><h2><i class="fa fa-code"></i> Mr Waffle</h2>
+  <div class="spacer"><h2><i class="fa fa-cutlery"></i> Mr Waffle</h2>
   <p>A Waffleria & Café - Mr.Waffle, não é só uma nova
 opção para lanches rápidos e sofisticados. É uma
 opção para a convivência, para brindar a amizade
@@ -180,9 +180,9 @@ e saborear a vida. </p>
    <div class="col-sm-8 wowload fadeInRight">
     <div id="carousel-works1" class="carousel slide" data-ride="carousel1">
     <div class="carousel-inner" role="listbox">
-     <div class="item active"><img src="images/portfolio/kaspary.png" class="img-responsive"><a href="#" class="view"><i class="fa fa-external-link"></i> View</a></div>
-     <div class="item"><img src="images/portfolio/kaspary2.png" class="img-responsive"><a href="#" class="view"><i class="fa fa-external-link"></i> View</a></div>
-     <div class="item"><img src="images/portfolio/kaspary3.png" class="img-responsive"><a href="#" class="view"><i class="fa fa-external-link"></i> View</a></div>
+     <div class="item active"><img src="images/portfolio/massassaboreditalia.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
+     <div class="item"><img src="images/portfolio/massassaboreditalia2.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
+     <div class="item"><img src="images/portfolio/massassaboreditalia3.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
     </div>    
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-works1" role="button" data-slide="prev"><i class="fa fa-3x fa-angle-left"></i></a>
@@ -191,9 +191,8 @@ e saborear a vida. </p>
   </div>
   
    <div class="col-sm-4 wowload fadeInLeft">
-  <div class="spacer"><h2><i class="fa fa-code"></i> Mr Waffle</h2>
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+  <div class="spacer"><h2><i class="fa fa-cutlery"></i> Massas Sabore D'Itália</h2>
+  <p>Nascidos na cozinha, ao redor do fogão à lenha da nona, em meio a farinha e ovos, a massas Sabore D’Itália iniciou sua trajetória no ramo da gastronomia no ano de 1997.</p>
   </div>
   </div>
   
