chore: Add Jardins Kaspary case

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ e saborear a vida. </p>
     <div class="carousel-inner" role="listbox">
      <div class="item active"><img src="images/portfolio/mrwaffle.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank"class="view"><i class="fa fa-external-link"></i>Acessar </a></div>
      <div class="item"><img src="images/portfolio/mrwaffle2.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
-     <div class="item"><img src="images/portfolio/mrwaffle3.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
+     <div class="item"><img src="images/portfolio/mrwaffle3.jpeg" class="img-responsive"><a href="http://mrwaffle.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
     </div>    
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-works" role="button" data-slide="prev"><i class="fa fa-3x fa-angle-left"></i></a>
@@ -174,15 +174,12 @@ e saborear a vida. </p>
   </div>  
   
   <div class="row">
- 
- 
-
    <div class="col-sm-8 wowload fadeInRight">
     <div id="carousel-works1" class="carousel slide" data-ride="carousel1">
     <div class="carousel-inner" role="listbox">
-     <div class="item active"><img src="images/portfolio/massassaboreditalia.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
-     <div class="item"><img src="images/portfolio/massassaboreditalia2.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
-     <div class="item"><img src="images/portfolio/massassaboreditalia3.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acesar</a></div>
+     <div class="item active"><img src="images/portfolio/massassaboreditalia.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+     <div class="item"><img src="images/portfolio/massassaboreditalia2.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+     <div class="item"><img src="images/portfolio/massassaboreditalia3.jpeg" class="img-responsive"><a href="http://massassaboreditalia.com.br" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
     </div>    
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-works1" role="button" data-slide="prev"><i class="fa fa-3x fa-angle-left"></i></a>
@@ -196,6 +193,30 @@ e saborear a vida. </p>
   </div>
   </div>
   
+  </div>  
+  
+   
+  <div class="row">
+   <div class="col-sm-4 wowload fadeInLeft">
+  <div class="spacer"><h2><i class="fa fa-leaf"></i> Jardins Kaspary</h2>
+  <p>Desde 2012, e em todas as estações do ano, a Jardins Kaspary atua com suas cores e sua alegria no embelezamento de jardins e espaços de convivência.</p>
+  </div>
+  </div>
+  
+  	
+   <div class="col-sm-8 wowload fadeInRight">
+    <div id="carousel-works2" class="carousel slide" data-ride="carousel2">
+    <div class="carousel-inner" role="listbox">
+     <div class="item active"><img src="images/portfolio/jardinskaspary.jpeg" class="img-responsive"><a href="http://www.jardinskaspary.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+     <div class="item"><img src="images/portfolio/jardinskaspary2.jpeg" class="img-responsive"><a href="http://www.jardinskaspary.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+     <div class="item"><img src="images/portfolio/jardinskaspary3.jpeg" class="img-responsive"><a href="http://www.jardinskaspary.com.br/" target="_blank" class="view"><i class="fa fa-external-link"></i> Acessar</a></div>
+    </div>    
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-works2" role="button" data-slide="prev"><i class="fa fa-3x fa-angle-left"></i></a>
+    <a class="right carousel-control" href="#carousel-works2" role="button" data-slide="next"><i class="fa fa-3x fa-angle-right"></i></a>
+    </div>
+  </div>
+
   </div>  
 </div>
 <!-- works -->
