chore: Move social icons to 'contact' section

--- a/index.html
+++ b/index.html
@@ -193,8 +193,14 @@
 
     <div id="contact"  class="contact" data-spy="scroll" data-target="#contact">
       <div class="row">
-        <div class=" col-sm-5  wowload fadeInLeft">
+        <div class="col-sm-5 wowload fadeInLeft">
           <img src="images/logo.png" class="img-responsive">
+	    <div class="social">
+		<a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+		<a href="#"><i class="fa fa-dribbble fa-2x"></i></a>
+		<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+		<a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+            </div>
         </div>
         <div class="col-sm-5 wowload fadeInRight">
           <div class="spacer">  
