--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div id="contact"  class="contact" data-spy="scroll" data-target="#contact">
       <div class="row">
         <div class="col-sm-5 wowload fadeInLeft">
-          <img src="images/logo.png" class="img-responsive">
+          <img src="images/logo_branco.png" class="img-responsive">
 	    <div class="social">
 		<a href="#"><i class="fa fa-facebook fa-2x"></i></a>
 		<a href="#"><i class="fa fa-dribbble fa-2x"></i></a>
