#Changed Mobit's logo and social media links, aswell as contact forms (using bootstrap col and col-..-offset's)
#Social media links changed from fa-2x to fa-3x

#Added a shadow to top navigation bar

#Main css file structural changes: Separated into sections (Header, Footer,...)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- animate.css -->
     <link rel="stylesheet" href="assets/animate/animate.css" />
 
+
+
 	<!-- favicon -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
@@ -82,7 +84,7 @@
           </div>
     <!-- #Header Starts -->
 
-    <div class="container">
+    <div class="container ">
       <div class="wrapper"> 
 
 
@@ -204,31 +206,30 @@
 
     <div id="contact"  class="contact" data-spy="scroll" data-target="#contact">
       <div class="row">
-        <div class="col-sm-5 wowload fadeInLeft">
+        <div class="col-xs-9 col-xs-offset-3 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1  wowload fadeInLeft">
           <img src="images/logo_branco.png" class="img-responsive">
-	    <div class="social">
-		<a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-		<a href="#"><i class="fa fa-dribbble fa-2x"></i></a>
-		<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-		<a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+    	    <div class="col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 social">
+        		<a href="#"><i class="fa fa-facebook fa-3x"></i></a>
+        		<a href="#"><i class="fa fa-dribbble fa-3x"></i></a>
+        		<a href="#"><i class="fa fa-twitter fa-3x"></i></a>
+        		<a href="#"><i class="fa fa-linkedin fa-3x"></i></a>
             </div>
         </div>
-        <div class="col-sm-5 wowload fadeInRight">
-          <div class="spacer">  
-            <h2><i class="fa fa-terminal"></i> Get in touch to start your project</h2>
-            <div class="wowload fadeInRightBig">      
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wowload fadeInRight">
+          <div class="spacer">
+            <h2><i class="col-xs-offset-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 fa fa-terminal"></i> Get in touch to start your project</h2>
+            <div class=" wowload fadeInRightBig">      
                 <div class="form-group"><input type="text" placeholder="Name" class="form-control"></div>
                 <div class="form-group"><input type="text" placeholder="Company" class="form-control"></div>
                 <div class="form-group"><textarea rows="5" placeholder="Message" class="form-control"></textarea></div>
                 <div class="form-group"><button class="btn btn-danger"><i class="fa fa-paper-plane"></i> Send</button></div>
-            </div>  
+            </div>
           </div>  
         
         </div>
       </div>
-
- 
     </div>
+
         <!-- Footer Starts -->
         <div class="footer text-center">
           <a href="#home" class="footerlinktop" >Mobit Studio © 2017</a>
