chore: Add white logo to the main banner

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 
 
           <!-- main banner-->
-          <h1 class="text-center">Soluções Web</h1>
+          <div class="service row text-center wowload fadeInLeft">
+	          <center>
+	    	      <img src="images/logo_branco_transparente.png" class="img-responsive">
+	          </center>
+          </div>
           <!-- main banner-->
 
 
