chore: Adjust banner logo position and size

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <!-- main banner-->
           <div class="service row text-center wowload fadeInLeft">
 	          <center>
-	    	      <img src="images/logo_branco_transparente.png" class="img-responsive">
+	    	      <img src="images/logo_branco_transparente.png" class="img-responsive top-logo">
 	          </center>
           </div>
           <!-- main banner-->
