--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div id="contact"  class="contact" data-spy="scroll" data-target="#contact">
       <div class="row">
         <div class="col-xs-9 col-xs-offset-3 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1  wowload fadeInLeft">
-          <img src="images/logo_branco.png" class="img-responsive">
+          <img src="images/logo_transparente.png" class="img-responsive">
     	    <div class="col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 social">
         		<a href="#"><i class="fa fa-facebook fa-3x"></i></a>
         		<a href="#"><i class="fa fa-dribbble fa-3x"></i></a>
