--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wowload fadeInRight">
           <div class="spacer">
-            <h2><i class="col-xs-offset-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 fa fa-terminal"></i> Get in touch to start your project</h2>
+            <h2><i class="col-xs-offset-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 fa fa-envelope-o"></i>Contato</h2>
             <div class=" wowload fadeInRightBig">      
                 <div class="form-group"><input type="text" placeholder="Name" class="form-control"></div>
                 <div class="form-group"><input type="text" placeholder="Company" class="form-control"></div>
