chore: Update contact form placeholders

--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
           <div class="spacer">
             <h2><i class="col-xs-offset-3 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 fa fa-envelope-o"></i>Contato</h2>
             <div class=" wowload fadeInRightBig">      
-                <div class="form-group"><input type="text" placeholder="Name" class="form-control"></div>
-                <div class="form-group"><input type="text" placeholder="Company" class="form-control"></div>
-                <div class="form-group"><textarea rows="5" placeholder="Message" class="form-control"></textarea></div>
-                <div class="form-group"><button class="btn btn-danger"><i class="fa fa-paper-plane"></i> Send</button></div>
+                <div class="form-group"><input type="text" placeholder="Nome" class="form-control" required></div>
+                <div class="form-group"><input type="text" placeholder="Email" class="form-control" required></div>
+                <div class="form-group"><textarea rows="5" placeholder="Mensagem" class="form-control" required></textarea></div>
+                <div class="form-group"><button class="btn btn-danger"><i class="fa fa-paper-plane" required></i> Enviar</button></div>
             </div>
           </div>  
         
